<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Habit Name/Description category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_name"
            style="@style/MainStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/hint_habit_name"
                android:inputType="text"
                style="@style/AddHabitStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Category category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_category"
            style="@style/MainStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Category drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Target vs Done category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_target_vs_done"
            style="@style/MainStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Target field -->
            <EditText
                android:id="@+id/edit_target"
                android:hint="@string/hint_target"
                android:inputType="number"
                style="@style/AddHabitStyle" />

            <!-- Times done field -->
            <EditText
                android:id="@+id/edit_done"
                android:hint="@string/hint_done"
                android:inputType="number"
                style="@style/AddHabitStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>